[package]
name = "phys_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
pollster = "0.3"
bytemuck = { version = "1.20.0", features = ["derive"] }
vecto-rs = { git = "https://github.com/Zycrasion/vecto-rs/", version = "2.4.3" }
image = "0.25.5"
